# aeasp-2025

./: .gitignore  .gitmodules  README.md  data.py  main.py  pyproject.toml  requirements.txt  todo.md
notebooks/: batch.ipynb  data.ipynb  graph.ipynb  project.ipynb  qcew.ipynb  scratch.ipynb  synthetic.ipynb  synthetic_freq.ipynb
src/: data_process.py  data_pull.py  models.py
src/sql/: init_dp03_table.sql  init_qcew_us_table.sql  init_wage_table.sql  models.py
