[project]
name = "aeasp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "polars>=1.25.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.2.0",
    "pynvim>=0.5.2",
]
